--- a/puplic/index.html
+++ b/puplic/index.html
@@ -1,44 +1,11 @@
 <!DOCTYPE html>
-<html lang="de">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Test-Webseite</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body { 
-            font-family: Arial, sans-serif; 
-            background: #f4f4f4; 
-            margin: 0; 
-            padding: 20px;
-        }
-        .container {
-            background: #fff;
-            padding: 30px;
-            border-radius: 8px;
-            max-width: 500px;
-            margin: 40px auto;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-        }
-        h1 { color: #333; }
-        p { color: #555; }
-        button {
-            padding: 10px 20px;
-            background: #0078d4;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        button:hover {
-            background: #005fa3;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>ImproveYourself</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Willkommen zur Test-Webseite!</h1>
-        <p>Dies ist eine einfache HTML-Seite zum Testen.</p>
-        <button onclick="alert('Button wurde geklickt!')">Test-Button</button>
-    </div>
+  <h1>Willkommen bei ImproveYourself 🚀</h1>
+  <p>Deine Seite läuft jetzt live auf Render!</p>
 </body>
 </html>
