--- a/puplic/index.html
+++ b/puplic/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <title>ImproveYourself</title>
+<meta charset="UTF-8">
+<title>GPT-3.5 Agenten</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Willkommen bei ImproveYourself 🚀</h1>
-  <p>Deine Seite läuft jetzt live auf Render!</p>
+<h1>GPT-3.5 Agenten</h1>
+<select id="agentSelect">
+  <option value="agent1">Agent 1</option>
+  <option value="agent2">Agent 2</option>
+  <option value="agent3">Agent 3</option>
+  <option value="agent4">Agent 4</option>
+  <option value="agent5">Agent 5</option>
+  <option value="agent6">Agent 6</option>
+</select>
+<br><br>
+<textarea id="question" placeholder="Frage hier eingeben..." rows="4" cols="50"></textarea>
+<br><br>
+<button onclick="askAgent()">Frage stellen</button>
+<p id="answer"></p>
+
+<script>
+async function askAgent() {
+    const agent = document.getElementById("agentSelect").value;
+    const question = document.getElementById("question").value;
+    const response = await fetch("/ask", {
+        method: "POST",
+        headers: {"Content-Type": "application/json"},
+        body: JSON.stringify({agent, question})
+    });
+    const data = await response.json();
+    document.getElementById("answer").innerText = data.answer || data.error;
+}
+</script>
 </body>
 </html>
